Added comments to blank route and changed style

--- a/src/main/resources/static/css/blank-route-style.css
+++ b/src/main/resources/static/css/blank-route-style.css
@@ -1,4 +1,10 @@
-p {
+h1 {
 	font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 2em;
+	font-weight: bold;
+}
+
+p {
+	font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 0.9em;
 }
