moved buttons on all html pages to above the tables

--- a/src/main/resources/static/css/custom-tweaks.css
+++ b/src/main/resources/static/css/custom-tweaks.css
@@ -28,3 +28,9 @@ div.multi-select-box {
 	max-height:300px;
 	overflow-y: auto;
 }
+
+/* add buttons margin from the bottom */
+
+.create-button {
+    margin-bottom: 15px;
+}
