--- a/src/main/resources/static/css/custom-tweaks.css
+++ b/src/main/resources/static/css/custom-tweaks.css
@@ -34,3 +34,42 @@ div.multi-select-box {
 .create-button {
     margin-bottom: 15px;
 }
+
+/* login page */
+
+.login-panel {
+    margin-top: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 50%;
+}
+
+.login-panel-heading {
+    text-align:center;
+}
+
+.login-field {
+    margin-bottom: 20px;
+    max-width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.login-label {
+    /* display: table-cell; */
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 2.5%;
+}
+
+.login-button {
+    margin-top: 20px;
+    margin-right: 2.5%;
+    text-align: right;
+}
+
+.login-alert {
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+}
