Fixed CSS height bug (again)

--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -11,7 +11,7 @@
 	margin-left: -275px;
 }
 
-.login-panel.stage-2 {
+.login-panel.bigger {
 	height: 326px !important;
 	margin-top: -163px !important;
 }
