removed placeholder text from medicines order time and moved to the help block below, and added max-height on CSS class modal-body wto make sure it doesn't grow larger than the window to adapt to all screen sizes

--- a/src/main/resources/static/css/custom-tweaks.css
+++ b/src/main/resources/static/css/custom-tweaks.css
@@ -34,3 +34,10 @@ div.multi-select-box {
 .create-button {
 	margin-bottom: 15px;
 }
+
+/* modal forms height limit */
+
+.modal-body {
+    max-height: 80%;
+    overflow-y: scroll;
+}
