--- a/src/main/resources/static/css/custom-tweaks.css
+++ b/src/main/resources/static/css/custom-tweaks.css
@@ -47,3 +47,12 @@ div.multi-select-box {
 .staff-role-modal {
     min-width: 25%;
 }
+
+/* barcode icon field */
+
+.barcode-field {
+    margin-bottom: 20px;
+    max-width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+}
