added padlock icon to password field in login.html

--- a/src/main/resources/static/css/custom-tweaks.css
+++ b/src/main/resources/static/css/custom-tweaks.css
@@ -50,7 +50,7 @@ div.multi-select-box {
 
 /* barcode icon field */
 
-.barcode-field {
+.icon-field {
     margin-bottom: 20px;
     max-width: 95%;
     margin-left: auto;
