Modal max-height

--- a/src/main/resources/static/css/custom-tweaks.css
+++ b/src/main/resources/static/css/custom-tweaks.css
@@ -37,22 +37,46 @@ div.multi-select-box {
 
 /* modal forms height limit */
 
-.modal-body {
-    max-height: 80%;
-    overflow-y: scroll;
+.edit-modal.modal {
+	width: 100% !important;
+	height: 100vh !important;
+	position: absolute;
+	left: 0;
+	top: 0;
+}
+
+.edit-modal.modal .modal-dialog {
+	height: calc(100% - 60px);
+}
+
+.edit-modal.modal .modal-dialog .modal-content {
+	height: 100%;
+}
+
+.edit-modal.modal .modal-dialog .modal-content .modal-header {
+	height: 87px;
+}
+
+.edit-modal.modal .modal-dialog .modal-content .modal-body {
+	height: calc(100% - 152px);
+	overflow-y: auto;
+}
+
+.edit-modal.modal .modal-dialog .modal-content .modal-footer {
+	height: 65px;
 }
 
 /* staff role form width adjusting */
 
 .staff-role-modal {
-    min-width: 25%;
+	min-width: 25%;
 }
 
 /* barcode icon field */
 
 .icon-field {
-    margin-bottom: 20px;
-    max-width: 95%;
-    margin-left: auto;
-    margin-right: auto;
+	margin-bottom: 20px;
+	max-width: 95%;
+	margin-left: auto;
+	margin-right: auto;
 }
