fixed the dropdown menu width when clicking on user to access user settings

--- a/src/main/resources/static/css/custom-tweaks.css
+++ b/src/main/resources/static/css/custom-tweaks.css
@@ -80,3 +80,9 @@ div.multi-select-box {
 	margin-left: auto;
 	margin-right: auto;
 }
+
+/* user dropdown menu width adjusting */
+
+.user-dropdown-menu {
+    min-width: 190px;
+}
