First draft HTML for booking pattern editing

--- a/src/main/resources/static/css/custom-tweaks.css
+++ b/src/main/resources/static/css/custom-tweaks.css
@@ -85,3 +85,9 @@ html, body {
 .user-dropdown-menu {
     min-width: 190px;
 }
+
+/* stackable form controls */
+
+.stacked-form-control {
+	margin-bottom: 6px !important;
+}
