Tiny sidebar CSS fix

--- a/src/main/resources/static/css/custom-tweaks.css
+++ b/src/main/resources/static/css/custom-tweaks.css
@@ -19,7 +19,8 @@ html, body {
 /* fix sidebar highlights */
 
 .side-nav {
-	height: calc(100% - 51px) !important;
+	top: 50px !important;
+	height: calc(100% - 50px) !important;
 	overflow-y: auto;
 	overflow-x: hidden;
 }
