Fixed display of added staff

--- a/src/main/resources/static/css/new-booking-stage-2.css
+++ b/src/main/resources/static/css/new-booking-stage-2.css
@@ -2,3 +2,11 @@
 	font-weight: normal !important;
 	margin-bottom: 0 !important;
 }
+
+p.assigned-staff {
+	line-height: 180% !important;
+}
+
+p.assigned-staff span {
+	display: block;
+}
