--- a/src/main/resources/static/css/custom-tweaks.css
+++ b/src/main/resources/static/css/custom-tweaks.css
@@ -29,6 +29,14 @@ html, body {
 	width: 100%;
 }
 
+.side-nav li a:focus {
+	background-color: inherit !important;
+}
+
+.side-nav li.active a {
+	background-color: #000 !important;
+}
+
 /* add buttons margin from the bottom */
 
 .create-button {
