Add top-button class for top buttons that aren't create

--- a/src/main/resources/static/css/custom-tweaks.css
+++ b/src/main/resources/static/css/custom-tweaks.css
@@ -43,6 +43,10 @@ html, body {
 	margin-bottom: 15px;
 }
 
+.top-button {
+	margin-bottom: 15px;
+}
+
 /* modal forms height limit */
 
 .edit-modal.modal {
