Appointments of today now load into the day summary page, but need to remove unconfirmed appointments on DaySummaryRoute

--- a/src/main/resources/static/css/custom-tweaks.css
+++ b/src/main/resources/static/css/custom-tweaks.css
@@ -110,3 +110,9 @@ html, body {
 .label-as-badge {
 	border-radius: 1em;
 }
+
+/* day-summary tweaks */
+
+.day-summary-list {
+    margin-bottom: 15px;
+}
