--- a/src/main/resources/static/css/custom-tweaks.css
+++ b/src/main/resources/static/css/custom-tweaks.css
@@ -4,6 +4,7 @@ html, body {
 	display: block !important;
 	height: 100% !important;
 	margin: 0 !important;
+	overflow-x: hidden !important;
 }
 
 #wrapper {
