Added advice note during booking

--- a/src/main/resources/static/css/custom-tweaks.css
+++ b/src/main/resources/static/css/custom-tweaks.css
@@ -115,5 +115,11 @@ html, body {
 /* day-summary tweaks */
 
 .day-summary-list {
-    margin-bottom: 15px;
+	margin-bottom: 15px;
+}
+
+/* tooltips */
+
+.tooltip-inner {
+	white-space: pre-wrap;
 }
